--- a/bower.json
+++ b/bower.json
@@ -14,20 +14,20 @@
     "tests"
   ],
   "main": [
-  "build/core/jquery.jqplot.min.js",
-  "build/plugis/axis/jqplot.logAxisRenderer.min.js",
-  "build/plugis/axis/jqplot.dateAxisRenderer.min.js",
-  "build/plugis/axis/jqplot.categoryAxisRenderer.min.js",
-  "build/plugis/axis/jqplot.canvasAxisTickRenderer.min.js",
-  "build/plugis/axis/jqplot.canvasAxisLabelRenderer.min.js",
-  "build/plugis/cursor/jqplot.cursor.min.js",
-  "build/plugis/bar/jqplot.barRenderer.min.js",
-  "build/plugis/points/jqplot.pointLabels.min.js",
-  "build/plugis/bubble/jqplot.bubbleRenderer.min.js",
-  "build/plugis/legend/jqplot.enhancedLegendRenderer.min.js",
-  "build/plugis/highlighter/jqplot.highlighter.min.js",
-  "build/plugis/overlay/jqplot.canvasOverlay.min.js",
-  "build/core/jquery.jqplot.min.css"
+  "build/dist/core/jquery.jqplot.min.js",
+  "build/dist/plugis/axis/jqplot.logAxisRenderer.min.js",
+  "build/dist/plugis/axis/jqplot.dateAxisRenderer.min.js",
+  "build/dist/plugis/axis/jqplot.categoryAxisRenderer.min.js",
+  "build/dist/plugis/axis/jqplot.canvasAxisTickRenderer.min.js",
+  "build/dist/plugis/axis/jqplot.canvasAxisLabelRenderer.min.js",
+  "build/dist/plugis/cursor/jqplot.cursor.min.js",
+  "build/dist/plugis/bar/jqplot.barRenderer.min.js",
+  "build/dist/plugis/points/jqplot.pointLabels.min.js",
+  "build/dist/plugis/bubble/jqplot.bubbleRenderer.min.js",
+  "build/dist/plugis/legend/jqplot.enhancedLegendRenderer.min.js",
+  "build/dist/plugis/highlighter/jqplot.highlighter.min.js",
+  "build/dist/plugis/overlay/jqplot.canvasOverlay.min.js",
+  "build/dist/core/jquery.jqplot.min.css"
   
   ]
 }
