--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   "build/dist/plugins/axis/jqplot.canvasAxisTickRenderer.min.js",
   "build/dist/plugins/axis/jqplot.canvasAxisLabelRenderer.min.js",
   "build/dist/plugins/cursor/jqplot.cursor.min.js",
+  "build/dist/plugins/text/jqplot.canvasTextRenderer.min.js",
   "build/dist/plugins/bar/jqplot.barRenderer.min.js",
   "build/dist/plugins/points/jqplot.pointLabels.min.js",
   "build/dist/plugins/bubble/jqplot.bubbleRenderer.min.js",
